# sbom-visualizer

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  sbom-visualizer.html  web.Dockerfile
1.0.0d/: README.md  sbom-visualizer-1.0-d.html
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: auth.py  cache.py  cli.py  config.py  cvss.py  feeds_client.py  hardening.py  jobs.py  logging_config.py  main.py  models.py  nvd.py  parsers.py  report.py  sarif.py  scan_store.py  scanner.py  scoring.py  vex.py
backend/tests/: conftest.py  test_cache_reuse.py  test_cli.py  test_cvss.py  test_feeds_client.py  test_feeds_integration.py  test_hardening.py  test_license.py  test_nvd.py  test_nvd_budget.py  test_offline_osv.py  test_pagination.py  test_parsers.py  test_sarif.py  test_scoring.py  test_vex_scan_jobs_auth.py
certs/: generate-certs.sh
docs/: API_CONTRACT.md  COMPATIBILITY_GUIDE.md  FEATURES.md  FEEDS_CONTRACT.md  MODEL_GUIDE.md  OFFLINE_OSV.md  USER_GUIDE.md
feeds/: Dockerfile  README.md  requirements.txt
feeds/app/: __init__.py  config.py  downloader.py  logging_config.py  main.py  scheduler.py  store.py
feeds/tests/: test_osv.py  test_parse.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: api.ts  badges.ts  compare.test.ts  debug.ts  exports.ts  main.ts  sample.ts  ui.ts  (+6 more)
nginx/: default.conf  nginx.conf
samples/: README.md  cyclonedx-1.5-clean.json  cyclonedx-1.5-vulnerable.json  spdx-2.3-example.json  syft-example.json
(+11 files in other folders)
